reorganized server routes so both the binary string for the map and a json response can be obtained from the server without repeating code. Also refactored front end HTML and js to match the changes on the backend

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -16,8 +16,8 @@
     <div class="container" id="screen-container">
         <div class="row align-items-center" id="title-container">
             <div class="col" id="title">
-                <h1>Welcome to stealing A-Basin's Info!</h1>
-                <button class="btn btn-info btn-lg" id="trail-info-btn">Click Here To Steal Their Info</button>
+                <h1>Welcome! This simple data scraping webpage accompanies an IOT project found <a href="https://github.com/shodges201/SkiMap"> here </a> </h1>
+                <button class="btn btn-info btn-lg" id="trail-info-btn">Click Here To Access Their Info</button>
                 <div class="row">
                     <div class="col">
                             <h2>Open</h2>
